add support for setting record type and ttl
